--- a/17-random-person/setup/src/index.css
+++ b/17-random-person/setup/src/index.css
@@ -58,8 +58,8 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: var(--clr-grey-10);
   color: var(--clr-grey-1);
   line-height: 1.5;
@@ -159,6 +159,7 @@ p {
 /* container */
 .block {
   min-height: 50vh;
+  margin-top: 0px;
 }
 .bcg-black {
   background: #2c2e31;
@@ -169,16 +170,17 @@ p {
   max-width: 730px;
   background: var(--clr-white);
   margin: 0 auto;
-  margin-top: -200px;
+  margin-top: 0px;
   border-radius: var(--radius);
   position: relative;
   text-align: center;
   padding: 1.5rem;
   box-shadow: var(--dark-shadow);
+  transform: translateY(50%);
 }
 
 .container::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
